fix: Actually commit the GitHub CLI workflow fix
- Ensure the updated workflow without cli/gh-extension-manager is committed

--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -86,9 +86,10 @@ jobs:
         run: npm install -g firebase-tools
 
       - name: Setup GitHub CLI for workflow management
-        uses: cli/gh-extension-manager@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # GitHub CLI is typically pre-installed on GitHub runners
+          # Verify it's available and working
+          gh --version
 
       # =============================================================================
       # CONTAINER & INFRASTRUCTURE TOOLS
