fix: Conditional npm caching in workflow
- Only enable npm cache when package-lock.json exists
- Prevents cache failure in repositories without npm dependencies

--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -61,8 +61,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: "npm"
-          cache-dependency-path: "**/package-lock.json"
+          # Only enable caching if package-lock.json exists
+          cache: ${{ hashFiles('**/package-lock.json') != '' && 'npm' || '' }}
 
       - name: Setup PowerShell Core for scripting
         shell: bash
