fix: add --break-system-packages to pip upgrade to resolve PEP 668 restriction
- Debian containers now have externally-managed-environment restriction
- This prevents pip from installing packages system-wide without the flag
- Required for Python setup in devcontainer environment

/Fixes devcontainer build failure with pip upgrade step

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -43,7 +43,7 @@ RUN apt-get update && apt-get install -y \
 
 # Set up Python 3 as default python and install latest pip
 RUN ln -sf /usr/bin/python3 /usr/bin/python \
-    && python -m pip install --upgrade pip
+    && python -m pip install --upgrade pip --break-system-packages
 
 # =============================================================================
 # NODE.JS & JAVASCRIPT DEVELOPMENT
